syntax = "proto3";

service CoordinationMethods {
  rpc FreezeProposal (FreezeRequest) returns (FreezeReply) {}
  rpc FreezeOrder (FreezeOrderRequest) returns (FreezeOrderReply) {}
  rpc Unfreeze (UnfreezeRequest) returns (UnfreezeReply) {}
}

message FreezeRequest {
  repeated string keys = 1;
}
message FreezeReply {
  bool ok = 1;
  repeated string throughputs = 2;
}

message FreezeOrderRequest {

}

message FreezeOrderReply {

}

message UnfreezeRequest {

}

message UnfreezeReply {

}